--- a/project/index.html
+++ b/project/index.html
@@ -6,7 +6,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Zia Graphics Editor</title>
+    </head>
      
-
+   <body>
     <script type="text/javascript" src="script.js"></script></body>
 </html>
